Add measure_time option to ONNX detector for inference timing and FPS reporting

--- a/onnx_detect_demo.ipynb
+++ b/onnx_detect_demo.ipynb
@@ -48,6 +48,7 @@
     "conf_thres = 0.25\n",
     "iou_thres = 0.45\n",
     "imgsz = None  # 例如 (640, 640) 或 640\n",
+    "measure_time = False  # True 时打印推理耗时与 FPS\n",
     "\n",
     "detector = OnnxYoloDetector(\n",
     "    onnx_path,\n",
@@ -108,7 +109,11 @@
     "if image is None:\n",
     "    raise FileNotFoundError(image_path)\n",
     "\n",
-    "detections = detector.predict(image)\n",
+    "detections = detector.predict(image, measure_time=measure_time)\n",
+    "if measure_time and detector.last_inference_time is not None:\n",
+    "    inf_ms = detector.last_inference_time * 1000.0\n",
+    "    fps = 1.0 / detector.last_inference_time if detector.last_inference_time > 0 else float(\"inf\")\n",
+    "    print(f\"Inference: {inf_ms:.2f} ms | FPS: {fps:.2f}\")\n",
     "vis = detector.visualize(image, detections)\n",
     "show_bgr(vis, title=f'dets: {len(detections)}')\n"
    ]
@@ -159,7 +164,11 @@
     "    image = cv2.imread(str(img_path))\n",
     "    if image is None:\n",
     "        continue\n",
-    "    detections = detector.predict(image)\n",
+    "    detections = detector.predict(image, measure_time=measure_time)\n",
+    "    if measure_time and detector.last_inference_time is not None:\n",
+    "        inf_ms = detector.last_inference_time * 1000.0\n",
+    "        fps = 1.0 / detector.last_inference_time if detector.last_inference_time > 0 else float(\"inf\")\n",
+    "        print(f\"Inference: {inf_ms:.2f} ms | FPS: {fps:.2f}\")\n",
     "    vis = detector.visualize(image, detections)\n",
     "    out_path = save_dir / img_path.name\n",
     "    cv2.imwrite(str(out_path), vis)\n",
@@ -209,7 +218,11 @@
     "        cap.release()\n",
     "\n",
     "for frame in iter_camera_frames(num_frames=20):\n",
-    "    detections = detector.predict(frame)\n",
+    "    detections = detector.predict(frame, measure_time=measure_time)\n",
+    "    if measure_time and detector.last_inference_time is not None:\n",
+    "        inf_ms = detector.last_inference_time * 1000.0\n",
+    "        fps = 1.0 / detector.last_inference_time if detector.last_inference_time > 0 else float(\"inf\")\n",
+    "        print(f\"Inference: {inf_ms:.2f} ms | FPS: {fps:.2f}\")\n",
     "    vis = detector.visualize(frame, detections)\n",
     "    clear_output(wait=True)\n",
     "    display(vis[:, :, ::-1])  # BGR to RGB\n"
