Add TensorRT support with configurable options for improved inference performance

--- a/onnx_detect_demo.ipynb
+++ b/onnx_detect_demo.ipynb
@@ -53,12 +53,31 @@
     "imgsz = 640  # 例如 (640, 640) 或 640\n",
     "measure_time = True  # True 时打印推理耗时与 FPS\n",
     "\n",
+    "use_tensorrt = True\n",
+    "trt_fp16 = True\n",
+    "trt_cache_path = repo_root / \"trt_cache\"\n",
+    "trt_workspace_mb = 2048\n",
+    "cuda_device_id = 0\n",
+    "\n",
+    "providers = None\n",
+    "if use_tensorrt:\n",
+    "    providers = [\n",
+    "        (\"TensorrtExecutionProvider\", {\n",
+    "            \"trt_fp16_enable\": trt_fp16,\n",
+    "            \"trt_engine_cache_enable\": True,\n",
+    "            \"trt_engine_cache_path\": str(trt_cache_path),\n",
+    "            \"trt_max_workspace_size\": trt_workspace_mb * 1024 * 1024,\n",
+    "        }),\n",
+    "        (\"CUDAExecutionProvider\", {\"device_id\": cuda_device_id}),\n",
+    "    ]\n",
+    "\n",
     "detector = OnnxYoloDetector(\n",
     "    onnx_path,\n",
     "    class_names=load_class_names(classes_path),\n",
     "    conf_thres=conf_thres,\n",
     "    iou_thres=iou_thres,\n",
     "    input_size=imgsz,\n",
+    "    providers=providers,\n",
     ")\n"
    ]
   },
