Enhance camera frame visualization with matplotlib for improved display quality

--- a/onnx_detect_demo.ipynb
+++ b/onnx_detect_demo.ipynb
@@ -323,6 +323,7 @@
    "outputs": [],
    "source": [
     "from IPython.display import display, clear_output\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "camera_handle = {\"type\": None, \"obj\": None}\n",
     "\n",
@@ -373,7 +374,11 @@
     "        print(f\"Inference: {inf_ms:.2f} ms | FPS: {fps:.2f}\")\n",
     "    vis = detector.visualize(frame, detections)\n",
     "    clear_output(wait=True)\n",
-    "    display(vis[:, :, ::-1])  # BGR to RGB\n"
+    "    plt.figure(figsize=(6, 4))\n",
+    "    plt.imshow(vis[:, :, ::-1])\n",
+    "    plt.axis(\"off\")\n",
+    "    display(plt.gcf())\n",
+    "    plt.close()\n"
    ]
   },
   {
