Refactor camera handling to streamline frame capture and resource management

--- a/onnx_detect_demo.ipynb
+++ b/onnx_detect_demo.ipynb
@@ -324,47 +324,31 @@
    "source": [
     "from IPython.display import display, clear_output\n",
     "import matplotlib.pyplot as plt\n",
+    "from jetcam.csi_camera import CSICamera\n",
+    "import gc\n",
     "\n",
-    "camera_handle = {\"type\": None, \"obj\": None}\n",
+    "camera = None\n",
     "\n",
     "def iter_camera_frames(num_frames=50, width=640, height=480, fps=30):\n",
-    "    try:\n",
-    "        from jetcam.csi_camera import CSICamera\n",
-    "        camera = CSICamera(width=width, height=height, fps=fps)\n",
-    "        camera_handle[\"type\"] = \"jetcam\"\n",
-    "        camera_handle[\"obj\"] = camera\n",
-    "        for _ in range(num_frames):\n",
-    "            frame = camera.read()\n",
-    "            if frame is None:\n",
-    "                continue\n",
-    "            yield frame\n",
-    "    except Exception:\n",
-    "        cap = cv2.VideoCapture(0)\n",
-    "        camera_handle[\"type\"] = \"opencv\"\n",
-    "        camera_handle[\"obj\"] = cap\n",
-    "        cap.set(cv2.CAP_PROP_FRAME_WIDTH, width)\n",
-    "        cap.set(cv2.CAP_PROP_FRAME_HEIGHT, height)\n",
-    "        for _ in range(num_frames):\n",
-    "            ok, frame = cap.read()\n",
-    "            if not ok:\n",
-    "                break\n",
-    "            yield frame\n",
-    "        cap.release()\n",
+    "    global camera\n",
+    "    camera = CSICamera(width=width, height=height, fps=fps)\n",
+    "    for _ in range(num_frames):\n",
+    "        frame = camera.read()\n",
+    "        if frame is None:\n",
+    "            continue\n",
+    "        yield frame\n",
     "\n",
     "\n",
     "def stop_camera():\n",
-    "    obj = camera_handle.get(\"obj\")\n",
-    "    if obj is None:\n",
+    "    global camera\n",
+    "    if camera is None:\n",
     "        return\n",
-    "    if camera_handle.get(\"type\") == \"jetcam\":\n",
-    "        if hasattr(obj, \"stop\"):\n",
-    "            obj.stop()\n",
-    "        if hasattr(obj, \"release\"):\n",
-    "            obj.release()\n",
-    "    else:\n",
-    "        if hasattr(obj, \"release\"):\n",
-    "            obj.release()\n",
-    "    camera_handle[\"obj\"] = None\n",
+    "    if hasattr(camera, \"stop\"):\n",
+    "        camera.stop()\n",
+    "    if hasattr(camera, \"release\"):\n",
+    "        camera.release()\n",
+    "    camera = None\n",
+    "    gc.collect()\n",
     "\n",
     "for frame in iter_camera_frames(num_frames=20):\n",
     "    detections = detector.predict(frame, measure_time=measure_time)\n",
